[package]
name = "actix_web_demo"
version = "0.1.0"
authors = ["lianwei <lianwei1994@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "1.0.0", features=["rust-tls"] }
actix-files = "=0.1.0"
log ="0.4.8"
futures  ="0.1.29"
env_logger ="0.6.2"
bytes ="0.4.12"
rustls = "0.15"
webpki="*"
awc ="0.2.8"