[package]
name = "data_demo"
version = "0.1.0"
authors = ["lianwei <lianwei1994@163.com>"]
edition = "2018"

[dependencies]
tokio-core = "*"
serde_json = "*"
lru = "*"
hyper = "*"
redis = "0.10.0"
arrayvec = { version = "0.4", features = ["serde-1", "array-sizes-33-128"] }
pretty_env_logger = "*"
log = "*"
env_logger = "0.6.0"
chrono ="*"
