[package]
name = "redis_demo"
version = "0.1.0"
authors = ["IThawk <lianwei@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = {version = "0.11.0"}
tokio-redis-pool ="*"
futures="*"
tokio="*"
tokio-resource-pool ="*"
