[package]
name = "tokio_1_demo"
version = "0.1.0"
authors = ["lianwei <lianwei1994@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio ="0.1"
tokio-threadpool = "0.1"
futures ="0.1"
bytes ="0.4"
tokio-io = "0.1"
tokio-current-thread ="0.1"
tokio-executor ="0.1"
tokio-reactor ="0.1"
tokio-timer ="0.2"
tokio-codec = "0.1"
http = "0.1"
httparse ="1.0"
serde = "1.0"
serde_derive ="1.0"
time = "0.1"
serde_json= "1.0"
num_cpus = "1.0"
env_logger = "0.5"